# ThreadPool

./: CMakeLists.txt  README.md  functions.h  globals.h  images.qrc  mainwindow.cpp  mainwindow.h  taskstablemodel.cpp  taskstablemodel.h  threadpool.cpp  threadpool.h  Пояснение к реализации.docx
